--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 /Videos.meta
+/AR 1.js-master.meta
+/AR.js-master.meta
+/ARjs_Unity.meta
+/Models.meta
+/pattern-Print 1.jpg
+/pattern-Print 1.jpg.meta
+/pattern-Print 1.patt
+/pattern-Print 1.patt.meta
+/pattern-Print 1.png
+/pattern-Print 1.png.meta
+/Scenes.meta
+/ARjs_Unity
+/Models
+/Scenes
+/Videos
+/AR.js-master/aframe/SampleScene/pattern-Print 1.patt
+/AR.js-master/aframe/SampleScene/pattern-Print 1.patt.meta
